--- a/Clinic Website/Views/Daylist/YourclinicDaylist.cshtml
+++ b/Clinic Website/Views/Daylist/YourclinicDaylist.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Clinic_Website.Models.DayList>
+@using Clinic_Website.Models
 
 @{
     ViewBag.Title = "YourclinicDaylist";
@@ -21,20 +22,34 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Clinic.ClinicName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DayName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Clinic.ClinicName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DayName)
+            </td>
+            <td>
+                @foreach (var item1 in item.AvailableTimes.ToList())
+                {
+                   
+                    @Html.ActionLink(item1.Slot_start.GetDisplayName(), "Edit", new { id = item.Id })  @:
+
+
+                    @:
+                }
+
+
+            </td>
+
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
