--- a/Clinic Website/Views/Home/Apply.cshtml
+++ b/Clinic Website/Views/Home/Apply.cshtml
@@ -1,4 +1,4 @@
-﻿@model Clinic_Website.Models.ApplyForClinic
+﻿@*@model Clinic_Website.Models.ApplyForClinic
 
 @{
     ViewBag.Title = "Apply";
@@ -41,4 +41,4 @@
 
 <div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+</div>*@
