EDIT APP+ state clause

--- a/Clinic Website/Views/Appointment/ClinicApps.cshtml
+++ b/Clinic Website/Views/Appointment/ClinicApps.cshtml
@@ -60,8 +60,8 @@
                 @Html.DisplayFor(modelItem => item.Date_Created)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Cancel", "Cancel", new { id = item.Id })
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) 
+             
             </td>
         </tr>
     }
