--- a/Clinic Website/NewFolder/assets/css/clinic.css
+++ b/Clinic Website/NewFolder/assets/css/clinic.css
@@ -15,6 +15,7 @@ td span {
     color: blue;
 }
 
+
 .single-slide div {
     padding: 4px;
 }
@@ -40,3 +41,17 @@ td span {
     padding-left: 10px;
     padding-right: 10px;
 }
+
+.time-slot a {
+    color: black;
+}
+
+.time-slot a:nth-child(2n) {
+    color: white;
+}
+
+.time-slot a:hover {
+
+    color: white;
+}
+
