--- a/Clinic Website/Views/Account/Login.cshtml
+++ b/Clinic Website/Views/Account/Login.cshtml
@@ -4,22 +4,22 @@
     ViewBag.Title = "Log in";
 }
 
-<div class="row BackgroundPhoto">
+<div class="row BackgroundPhoto" style="margin:0 auto; font-size:25px; " >
     <div>
-        <section id="loginForm">
+        <section id="loginForm" >
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <img src="~/Content/av.png" class="av" />
-                <h2>Login</h2>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <img width="300"height="300" src="~/Content/av.png" class="av" />
+                <h2>Login</h2>
 
                 <p>User Name</p>
                 @Html.TextBoxFor(m => m.UserName, new { @placeholder = "Enter Name" })
                 @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
 
-                <p>PassWord</p>
-                @Html.PasswordFor(m => m.Password,new { @placeholder = "***********" })
+                <p>Password</p>
+                @Html.PasswordFor(m => m.Password, new { @placeholder = "***********" })
                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
 
                 <input type="submit" value="Log in" />
@@ -27,10 +27,6 @@
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
-                @* Enable this once you have account confirmation enabled for password reset functionality
-            <p>
-                @Html.ActionLink("Forgot your password?", "ForgotPassword")
-            </p>*@
             }
         </section>
     </div>
