--- a/Clinic Website/Views/Clinics/YourClinics.cshtml
+++ b/Clinic Website/Views/Clinics/YourClinics.cshtml
@@ -73,8 +73,8 @@
             <td>
 
                 @Html.ActionLink("View App", "ClinicApps", "Appointment", new { id = item.Id }, htmlAttributes: new { @class = "" }) |
+                @Html.ActionLink("Clinic Days", "ClinicDays", "Daylist", new { id = item.Id }, htmlAttributes: new { @class = "" }) |
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
 
             </td>
